Fix alignment of caret in SelectList (#577)

--- a/src/SelectList/SelectList.css
+++ b/src/SelectList/SelectList.css
@@ -28,7 +28,6 @@
 
 .dropdownArrow {
   composes: absolute from global;
-  composes: block from global;
   align-items: center;
   display: flex;
   height: 100%;
